<resources>
    <string name="app_name">COEN390_Assignment1</string>
    <string name="settings">Settings</string>
    <string name="show_my_counts">Show My Counts</string>
    <string name="save">Save</string>
    <string name="counter_1_name">Counter 1 Name</string>
    <string name="counter_2_name">Counter 2 Name</string>
    <string name="counter_3_name">Counter 3 Name</string>
    <string name="counter_1_name_goes_here">Counter 1 name goes here</string>
    <string name="counter_2_name_goes_here">Counter 2 name goes here</string>
    <string name="counter_3_name_goes_here">Counter 3 name goes here</string>
    <string name="counter_1">Counter 1</string>
    <string name="counter_2">Counter 2</string>
    <string name="counter_3">Counter 3</string>
    <string name="total_count_0">Total Count: 0</string>
    <string name="max_count_goes_here">Max count goes here</string>
    <string name="maximum_counts">Maximum Counts</string>
    <string name="done" />
    <string name="edit_settings">Edit Settings</string>
    <string name="todo">TODO</string>
</resources>