<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Counts"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginBottom="28dp"
        android:text="@string/show_my_counts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Total"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/total_count_0"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/Counts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Settings"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/Counter1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Counter1"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/counter_1"
        android:text="@string/counter_1"
        app:layout_constraintBottom_toTopOf="@+id/Counter2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Counter2"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/counter_2"
        android:text="@string/counter_2"
        app:layout_constraintBottom_toTopOf="@+id/Counter3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Counter3"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/counter_3"
        android:text="@string/counter_3"
        app:layout_constraintBottom_toTopOf="@+id/Total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>